--- a/style/_media_queries.scss
+++ b/style/_media_queries.scss
@@ -8,16 +8,16 @@
 }
 
 @media only screen and (max-width: 768px){
-    body{
-        overflow: hidden;
-    }
+    // body{
+    //     overflow: hidden;
+    // }
 
     nav{
         .nav-links{
             //forcing to be on the right
             position: absolute;
             right: 0px;
-            top: 8vh;
+            top: 50px;
             width: 40%;
             background-color: #000;
             margin-right: 0;
@@ -72,3 +72,17 @@
 
 
 
+@media only screen and (max-width: 900px) {
+    main{
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+    
+}
+
+@media only screen and (max-width: 600px) {
+    main{
+        grid-template-columns: 1fr;
+    }
+    
+}
