--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -3,7 +3,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     background-color: #000;
-    min-height: 8vh;
+    min-height: 50px;
 
     .logo{
         text-transform: uppercase;
