--- a/style/main.css
+++ b/style/main.css
@@ -28,7 +28,7 @@ nav {
       -ms-flex-align: center;
           align-items: center;
   background-color: #000;
-  min-height: 8vh;
+  min-height: 50px;
 }
 
 nav .logo {
@@ -66,6 +66,9 @@ nav .burger div {
 }
 
 main {
+  position: absolute;
+  top: 100px;
+  left: 5%;
   display: -ms-grid;
   display: grid;
   width: 90%;
@@ -86,6 +89,8 @@ main div {
 
 main div img {
   width: 100%;
+  border-radius: 10px;
+  border: 2px solid #000;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -95,13 +100,10 @@ main div img {
 }
 
 @media only screen and (max-width: 768px) {
-  body {
-    overflow: hidden;
-  }
   nav .nav-links {
     position: absolute;
     right: 0px;
-    top: 8vh;
+    top: 50px;
     width: 40%;
     background-color: #000;
     margin-right: 0;
@@ -174,5 +176,21 @@ main div img {
 .toggle .line3 {
   -webkit-transform: rotate(45deg) translate(-5px, -6px);
           transform: rotate(45deg) translate(-5px, -6px);
+}
+
+@media only screen and (max-width: 900px) {
+  main {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  main {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
 }
 /*# sourceMappingURL=main.css.map */
